--- a/source/index.html
+++ b/source/index.html
@@ -8,85 +8,88 @@
 <body class="page__body">
   {% include "header.njk" %}
 
-  <main class="page__main">
-    <h1 class="page__title visualyy-hidden">
+  <main class="page-main">
+
+    <div class="background"></div>
+    <h1 class="page__title visually-hidden">
       Cat energy
     </h1>
     <section class="promo">
-      <h2 class="promo__title">Функциональное питание для котов</h2>
+      <h2 class="promo__title">Функциональное<br>питание&nbsp;для&nbsp;котов</h2>
       <p class="promo__text">Занялся собой? Займись котом!</p>
       <div class="image-container">
-        <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__img">
+        <img src="img/promo-chicken.png" alt="Корм для котов со вкусом курицы" class="promo__image">
       </div>
       <a href="#" class="promo__button button">Подобрать программу</a>
     </section>
     <section class="nutrition-programm">
-      <div class="nutrition-programm__slim">
+      <div class="nutrition-programm__card nutrition-programm__card--slim">
         <h2 class="nutrition-programm__title">Похудение</h2>
         <p class="nutrition-programm__text">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         <a href="#" class="nutrition-programm__link">Каталог slim</a>
       </div>
-      <div class="nutrition-programm__slim">
+      <div class="nutrition-programm__card nutrition-programm__card--fat">
         <h2 class="nutrition-programm__title">Набор массы</h2>
         <p class="nutrition-programm__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
         <a href="#" class="nutrition-programm__link">Каталог Pro</a>
       </div>
     </section>
     <section class="description">
-      <h2 class="desription__title">Как это работает</h2>
+      <h2 class="description__title">Как это работает</h2>
       <ol class="description__list">
-        <li class="description__item description__item-feed">
+        <li class="description__item description__item--feed">
             <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
-        <li class="description__item description__item-powder">
+        <li class="description__item description__item--powder">
             <p class="description__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.</p>
         </li>
-        <li class="description__item description__item-eating">
+        <li class="description__item description__item--eating">
             <p class="description__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
         </li>
-        <li class="description__item description__item-timer">
+        <li class="description__item description__item--timer">
             <p class="description__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
         </li>
       </ol>
     </section>
     <section class="example">
-      <h2 class="example__title">Живой пример</h2>
-      <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
       <div class="example-facts">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
         <dl class="example-facts__item">
           <dt class="example-facts__item-explanation">снижение веса</dt>
           <dd class="example-facts__item-fact">5 кг</dd>
           <dt class="example-facts__item-explanation">затрачено времени</dt>
           <dd class="example-facts__item-fact">60 дней</dd>
           <dt class="example__spending">Затраты на&nbsp;питание:</dt>
-          <dd class="example-facts__item-fact">15&nbsp;000&nbsp;РУБ.</dd>
+          <dd class="example-facts__item-fact example-facts__item-fact--spending">15&nbsp;000&nbsp;РУБ.</dd>
         </dl>
       </div>
-      <div class="example-slider">
-        <div class="slider-images">
-          <img src="img/cat-fat.png" alt="было" class="slider-images__was-image">
-          <img src="img/cat-skinny.png" alt="стало" class="slider-images__now-image">
+      <div class="slider">
+        <div class="slider__images">
+          <img src="img/cat-fat.png" alt="было" class="slider__image slider__image--was">
+          <img src="img/cat-skinny.png" alt="стало" class="slider__image slider__image--now">
         </div>
-        <div class="sliider-was-now" hidden>
-          <span class="sliider-was-now__text sliider-was-now__text--was">Было</span>
-          <div class="progress">
-            <div class="progress-line">
-              <button type="button" class="progress-line__button"><span class="visually-hidden">кнопка слайдера</span></button>
+        <div class="slider__controls-was-now" hidden>
+          <span class="slider__controls-text slider__controls-text--was">Было</span>
+          <div class="slider__progress">
+            <div class="slider__progress-line">
+              <button type="button" class="slider__button"><span class="visually-hidden">кнопка слайдера</span></button>
             </div>
           </div>
-          <span class="sliider-was-now__text sliider-was-now__text--now">Стало</span>
+          <span class="slider__controls-text slider__controls-text--now">Стало</span>
         </div>
       </div>
     </section>
     <section class="contacts">
       <h2 class="visually-hidden">Наш адрес</h2>
-      <p class="contacts__lead-text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
-      <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <div class="contacts__text">
+        <p class="contacts__lead-text">приглашаем<br>к&nbsp;сотрудничеству<br>дилеров!</p>
+        <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
+      </div>
       <div class="contacts__map"></div>
     </section>
   </main>
 
   {% include "footer.njk" %}
 </body>
-
 </html>
